--- a/index.html
+++ b/index.html
@@ -4,8 +4,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>New year</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@700&family=Ubuntu:wght@500&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
+    <div class="banner">
+
     
+    <div class ="banner-text">
+        <h4 class="text1">Happy New Year</h4>
+        <h2 class="text2">New Year Party <br>Celebration</h2>
+
+
+    </div>
+
+</div>
+
+
+    <main>
+
+    </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
