--- a/index.html
+++ b/index.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>New year</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@700&family=Ubuntu:wght@500&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@700&family=Ubuntu:wght@500&display=swap"
+        rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Inter&family=Ubuntu:wght@500&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="style.css">
 </head>
@@ -14,15 +19,20 @@
 <body>
     <div class="banner">
 
-    
-    <div class ="banner-text">
-        <h4 class="text1">Happy New Year</h4>
-        <h2 class="text2">New Year Party <br>Celebration</h2>
 
+        <div class="banner-text">
+            <h4 class="text1">Happy New Year</h4>
+            <h2 class="text2">New Year Party <br>Celebration</h2>
+
+
+        </div>
 
     </div>
-
-</div>
+    <div class="off">
+        <h3>65% OFF</h3>
+        <h6 id="off2">OUR HOLIDAY DEALS ARE BETTER</h6>
+        <h4 id="off3">ALL CATEGORIES</h4>
+    </div>
 
 
     <main>
@@ -32,4 +42,5 @@
 
     </footer>
 </body>
+
 </html>
