--- a/index.html
+++ b/index.html
@@ -34,6 +34,29 @@
         <h4 id="off3">ALL CATEGORIES</h4>
     </div>
 
+  
+    <div class="imge">
+        <img src="New Year Photo.png" alt="new year photo">
+    </div>
+
+    <div class="banner_2">
+        <div class="ban_text">
+        <h1 id="ban_text_1">Welcome to <br>midnight party</h1>
+        <h6 id="ban_text_2">Dolor sit amet consectetur. 
+            Consequat eget consectetur maecenas <br> 
+            sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </h6>
+            <div class="btn">
+        <button id="btn_primary"> Join Now</button>
+    </div>
+    </div>
+    <div class="year">
+    <img src="../assignment_1/resources/Group 70.png">
+</div>
+        
+       
+    </div>
+   
+
 
     <main>
 
