add gallary section

--- a/index.html
+++ b/index.html
@@ -70,6 +70,33 @@
 
 
     <main>
+        <div class="gallary">
+            <div class="gallary_text">
+                <h5 class="glry_txt_1">THE BEST GIFTS</h5>
+                <h2 class="glry_txt_2">Our Awesome Portfolio</h2>
+                <h6 class="glry_txt_3">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada.<br>
+                     Ipsum sed sodales risus ut pellentesque vel euismod. </h6>
+
+            </div>
+            <div class="gallary_pic">
+            <div class="gallary_pic_row1">
+                <img src="../assignment_1/resources/Rectangle 3.png" alt="bag1">
+                <img class="gallary_pic_row" src="../assignment_1/resources/Rectangle 4.png" alt="bag2">
+                <img class="gallary_pic_row" src="../assignment_1/resources/Rectangle 5.png" alt="red shoe">
+
+            </div>
+            <div class="gallary_pic_row2">
+                <img src="../assignment_1/resources/Rectangle 6.png" alt="white shoe">
+                <img class="gallary_pic_row" src="../assignment_1/resources/Rectangle 7.png" alt="sunglass">
+                <img class="gallary_pic_row" src="../assignment_1/resources/Rectangle 8.png" alt="ring">
+
+            </div>
+        </div>
+        </div>
+
+        <div class="messg">
+
+        </div>
      
     </main>
     <footer>
