add full footer

--- a/index.html
+++ b/index.html
@@ -136,8 +136,8 @@
             </div>
         </div>
         </div>
-        <div class="line">
-            
+        <hr class="line">
+
         </div>
             <div class="footer-row">
                 <div class="social_media">
@@ -148,7 +148,13 @@
                    
                 </div>
             </div>
+            <hr class="line">
 
+            <div class="reseved">
+                <div class="last">
+                    <h4 >2017, All Rights Reserved.</h4>
+                </div>
+            </div>
     </footer>
 </body>
 
