--- a/index.html
+++ b/index.html
@@ -65,6 +65,28 @@
             </div>
         </div>
     </div>
+    <bonus>
+        <div class="coming">
+        <div class="bon_colo">
+            <h5 class="glry_txt_1">NEW BEST OFFER</h5>
+                <h2 class="glry_txt_2">Coming Soon</h2>
+                <h6 class="glry_txt_3">Dolor sit amet consectetur.<br>
+                     Consequat eget consectetur<br> maecenas sed molestie<br>
+                    malesuada.
+                    Ipsum sed sodales risus ut<br> pellentesque vel euismod. </h6>
+
+        </div>
+        <div class="bon_colo">
+            <img class="bon_img" src="../assignment_1/resources/Ellipse 1.png">
+        </div>
+        <div class="bon_colo">
+            <h5 class="bon_txt">2024</h5>
+            <h6 class="glry_txt_3">Dolor sit amet consectetur.<br>
+                 Consequat eget consectetur maecenas sed.</h6>
+             <img class="bon_img2" src="../assignment_1/resources/Group 96.png">    
+        </div>
+    </div>
+    </bonus>
 
 
 
