--- a/index.html
+++ b/index.html
@@ -81,8 +81,9 @@
         </div>
         <div class="bon_colo">
             <h5 class="bon_txt">2024</h5>
-            <h6 class="glry_txt_3">Dolor sit amet consectetur.<br>
-                 Consequat eget consectetur maecenas sed.</h6>
+            <h6 class="bon_txt_2">Dolor sit amet consectetur.<br>
+                 Consequat eget consectetur<br>
+                  maecenas sed.</h6>
              <img class="bon_img2" src="../assignment_1/resources/Group 96.png">    
         </div>
     </div>
